build_fix for compilation error-symbol not found

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,17 @@
 
   <repositories>
     <repository>
+      <id>hortonwork repo</id>
+      <name>Hortonworks Repository</name>
+      <url>http://repo.hortonworks.com/content/groups/public</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
       <id>apache release</id>
       <url>https://repository.apache.org/content/repositories/releases/</url>
     </repository>
